[package]
name = "neuras"
version = "0.1.2"
authors = ["Joaquín R <globojorro@gmail.com>"]

[features]
default = []
async-mio = ["mio"]
async-tokio = ["async-mio", "futures", "tokio-core", "tokio-signal"]

[dependencies]
bitflags = "1.0"
chrono = "0.4"
error-chain = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4", "v5"] }
url = "1.5.1"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }
mio = { version = "0.6", optional = true }
futures = { version = "0.1.14", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-signal = { version = "0.1", optional = true }

[profile.release]
lto = true

[[example]]
name = "actorling"
path = "examples/actorling.rs"
required-features = ["async-tokio"]

[[example]]
name = "ciphered-sockets"
path = "examples/ciphered-sockets.rs"

[[example]]
name = "tokio-client"
path = "examples/tokio-client.rs"
required-features = ["async-tokio"]

[[example]]
name = "tokio-req-rep"
path = "examples/tokio-req-rep.rs"
required-features = ["async-tokio"]

[workspace]
