[package]
name = "neuras"
version = "0.1.2"
authors = ["Joaquín R <globojorro@gmail.com>"]

[features]
default = []
async-tokio = ["futures", "tokio-core", "tokio-signal"]

[dependencies]
bitflags = "1.0"
chrono = "0.4"
error-chain = "0.11.0"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
slab = "0.4"
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4", "v5"] }
url = "1.5.1"

# io deps
mio = "0.6"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }

# optional deps
futures = { version = "0.1.14", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-signal = { version = "0.1", optional = true }

[profile.release]
lto = true

[[example]]
name = "actorling"
path = "examples/actorling.rs"
required-features = ["async-tokio"]

[[example]]
name = "ciphered-sockets"
path = "examples/ciphered-sockets.rs"

[[example]]
name = "tokio-req-rep"
path = "examples/tokio-req-rep.rs"
required-features = ["async-tokio"]

[[test]]
name = "actorling"
path = "tests/actorling.rs"

[[test]]
name = "poller"
path = "tests/poller.rs"

[workspace]
