[package]
name = "neuras"
version = "0.2.0-dev"
authors = ["Joaquín R <globojorro@gmail.com>"]

[features]
default = ["async-tokio"]
async-tokio = ["futures", "tokio-core", "tokio-signal"]

[dependencies]
chrono = "0.4"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
slab = "0.4"
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4", "v5"] }
url = "1.7"

# io deps
mio = "0.6"
zmq = "0.9"

# optional deps
futures = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-signal = { version = "0.1", optional = true }

[profile.release]
lto = true

[[example]]
name = "actorling"
path = "examples/actorling.rs"
required-features = ["async-tokio"]

[[example]]
name = "tokio-req-rep"
path = "examples/tokio-req-rep.rs"
required-features = ["async-tokio"]

[[test]]
name = "actorling"
path = "tests/actorling.rs"

[[test]]
name = "poller"
path = "tests/poller.rs"

[workspace]
